// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/message-center/components/templates/common/MessageTextContent should render correctly with body prop 1`] = `
<div
  className="MessageTextContent"
>
  <div
    className="MessageTextContent-title"
  >
    This is a test title
  </div>
  <div
    className="MessageTextContent-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<em>test</em>",
      }
    }
  />
</div>
`;

exports[`components/message-center/components/templates/common/MessageTextContent should render correctly without body prop 1`] = `
<div
  className="MessageTextContent"
>
  <div
    className="MessageTextContent-title"
  >
    This is a test title
  </div>
  <div
    className="MessageTextContent-body"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
  />
</div>
`;
